--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <i class="fa-brands fa-linkedin"></i>
                 <span>linkedin</span>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://github.com/EmilioReyess001" target="_blank">
                 <i class="fa-brands fa-github"></i> 
                 <span>Github</span>
             </a>
@@ -209,16 +209,16 @@
             <img src="./Img/esta.png" height="190px" width="320px">
             <div class="Formacion-Texto">
                 <h2>U T P </h2>
-                <p>Estudiante/p>
-                <p>20221 - 2026</p> 
+                <p>ESTUDIANTE</p>
+                <p>20221 - EN CURSO</p> 
             </div>
         </div>
         <div class="Formacion">
             <img src="./Img/udemy.png" height="110px" width="200px" >
             <div class="Formacion-texto">
                 <h2>Udemy</h2>
-                <p>Programación en C#</p>
-                <p>2024 - En curso</p>
+                <p>Programación en PHP JavaScript y MySQL</p>
+                
             </div>
         </div>
      
