--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <a href="https://x.com/devsebastian31" target="_blank"><i class="devicon-twitter-original"></i></a>
             <a href="https://codepen.io/devsebastian31" target="_blank"><i class="fa-brands fa-codepen"></i></a>
         </div>
-        <span>Copyright © | Coded with Sebastian Zhunaula</span>
+        <span>Copyright © | EMILIO REYES</span>
     </div>
     <script src="JS/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
