--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>EmilioReyes</title>
+    <title>DESARROLLO</title>
 </head>
 <body>
     <div id="particles-js"></div>
