--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>DESARROLLO</title>
+    <title>DESARROLLOS</title>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -351,9 +351,9 @@
     </section>
     <div class="diseñado">
         <div class="redes">
-            <a href="https://www.instagram.com/devsebastian31/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://x.com/devsebastian31" target="_blank"><i class="devicon-twitter-original"></i></a>
-            <a href="https://codepen.io/devsebastian31" target="_blank"><i class="fa-brands fa-codepen"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" target="_blank"><i class="devicon-twitter-original"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-codepen"></i></a>
         </div>
         <span>Copyright © | EMILIO REYES</span>
     </div>
