Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div id="typing-text"></div>
         </div>
         <p>Soy desarrollador web Full-stack.</p>
+  <p>"Desliza hacia abajo para explorar el contenido</p>
         <div class="Social">
             <a href="https://drive.google.com/file/d/14c9Nv-wP0pS6-jicra37PvzPeeAAT7H3/view?usp=sharing" target="_blank">
                 <i class="fa-solid fa-file"></i>
