--- a/index.html
+++ b/index.html
@@ -307,9 +307,11 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px" width="40px"/>
                 <div class="link">
                     <div class="Codigo">
-                        <a href="https://github.com/bl4ck44/Sandboxed" target="_blank">Codigo <i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/EmilioReyess001/BlogCafe" target="_blank">Codigo <i class="fa-brands fa-github"></i></a>
                     </div>
-
+                     <div class="sitio">
+                        <a href="https://emilioreyess001.github.io/BlogCafe/" target="_blank">Sitio Web <i class="fa-solid fa-globe"></i></a>
+                    </div>
                     
                 </div>
             </div>
