--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="Container-logo">
             <img src="Img/Logo.png" class="logo">
         </div>
-            <h1>Hola soy Emilio Reyesss</h1>
+            <h1>Hola soy Emilio Reyes</h1>
         <div class="typing-constainer">
             <div id="typing-text"></div>
         </div>
