--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="lenguaje">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px" width="40px"/>
-                    <p>Javascritpt</p>
+                    <p>JavaScript</p>
                 </div>
                
                 <div class="lenguaje">
@@ -302,7 +302,7 @@
             <img src="Img/cafe.jpg" class="Imagen">
             <div class="Texto">
                 <h2>BLOG CAFE</h2>
-                <p class="Parrafo">Menú de herramientas para analizar malware en un entorno aislado ya que tiene herramientas útiles y facil de usar.</p>
+                <p class="Parrafo">Desde la molienda perfecta hasta el arte latte. Aprende, comparte y vive el mundo del café con nosotros.</p>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" height="40px" width="40px"/>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" height="40px" width="40px"/>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px" width="40px"/>
