--- a/index.html
+++ b/index.html
@@ -259,7 +259,11 @@
                      <div class="sitio">
                       <a href="https://bl4ck44.github.io/" target="_blank">Sitio Web <i class="fa-solid fa-globe"></i></a> 
                     </div>
+                    
                     -->
+                     <div class="sitio">
+                        <a href="http://192.168.100.27:90/sis-asistencia/vista/login/login.php" target="_blank">Sitio Web <i class="fa-solid fa-globe"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
